--- a/sidebar-right.html
+++ b/sidebar-right.html
@@ -85,7 +85,6 @@
 				<div class="row widget">
 					<div class="col-xs-12">
 						<h4>ALGUNOS PROYECTOS ACTUALES EN BARRANCABERMEJA</h4>
-						<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Facere, ratione delectus reiciendis nulla nisi pariatur molestias animi eos repellat? Vel.</p>
 					</div>
 				</div>
 				<div class="row widget">
@@ -115,8 +114,7 @@
 				<div class="row widget">
 					<div class="col-xs-12">
 						<h4>ECOPETROL</h4>
-						<p><img src="assets/images/2.jpg" alt=""></p>
-						<p>Qui, debitis, ad, neque reprehenderit laborum soluta dolor voluptate eligendi enim consequuntur eveniet recusandae rerum? Atque eos corporis provident tenetur.</p>
+						<p><img src="assets/images/2.jpg" alt="">
 					</div>
 				</div>
 
