--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 	<meta name="description" content="">
 	<meta name="author"      content="Soluciones Informáticas">
 	
-	<title>Inicio || seguvisol ltda </title>
+	<title>seguvisol</title>
 
 	<link rel="shortcut icon" href="assets/images/gt_favicon.png">
 	
@@ -60,7 +60,7 @@
 	<!-- /Header -->
 	<!-- Intro -->
 	<div class="container text-center">
-		<br> <br>
+		<br><h1>SEGUVISOL LTDA</h1><br>
 		<h2 class="thin">OFRECEMOS LA SEGURIDAD QUE ESTÁS BUSCANDO</h2>
 		<p class="text-muted">
 			No importa el tamaño de su negocio, público o privado, o en qué industria o sector se especializa, podemos ayudarlo a satisfacer sus necesidades y proteger sus activos.<br> Estamos equipados con la última tecnología y profesionales capacitados en el campo de la seguridad y vigilancia integral. Contamos con personal de seguridad en los siguientes campos: Industria, Residencial, Salud, Educación, Comercio, Construcción, Puertos y Público.
